{
  "version": 4,
  "terraform_version": "0.15.5",
  "serial": 12,
  "lineage": "49278b81-dd30-70b2-dea6-12278c17820a",
  "resources": [
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "eigw-0c4cc8f9bc2dc4e39",
            "tags": {
              "Name": "vpc1"
            },
            "tags_all": {
              "Name": "vpc1"
            },
            "vpc_id": "vpc-04331e298d3cea4bc"
          },
          "dependencies": [
            "module.vpc1.aws_vpc.this",
            "module.vpc1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_ipv6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "arn": null,
            "id": "rtb-0776c4b82436e95d8",
            "owner_id": null,
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.10.0.0/16",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0d107e3805b38503d",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc1"
            },
            "tags_all": {
              "Name": "vpc1"
            },
            "vpc_id": "vpc-04331e298d3cea4bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc1.aws_vpc.this",
            "module.vpc1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "arn": null,
            "id": "rtb-0d091a3445ea6f0a3",
            "owner_id": null,
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.10.0.0/16",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0d107e3805b38503d",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc1"
            },
            "tags_all": {
              "Name": "vpc1"
            },
            "vpc_id": "vpc-04331e298d3cea4bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc1.aws_vpc.this",
            "module.vpc1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "arn": null,
            "id": "rtb-0cea2f9ff8b306a29",
            "owner_id": null,
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.10.0.0/16",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0d107e3805b38503d",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc1"
            },
            "tags_all": {
              "Name": "vpc1"
            },
            "vpc_id": "vpc-04331e298d3cea4bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc1.aws_vpc.this",
            "module.vpc1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:734084427358:subnet/subnet-03e82279153265083",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-03e82279153265083",
            "ipv6_cidr_block": "2406:da1a:f1f:9600::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0d3e0a646acff80d0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "734084427358",
            "tags": {
              "Name": "vpc1"
            },
            "tags_all": {
              "Name": "vpc1"
            },
            "vpc_id": "vpc-04331e298d3cea4bc"
          },
          "dependencies": [
            "module.vpc1.aws_vpc.this",
            "module.vpc1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:734084427358:subnet/subnet-0df39126391184c68",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.1.2.0/24",
            "id": "subnet-0df39126391184c68",
            "ipv6_cidr_block": "2406:da1a:f1f:9601::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-070c0a5b22254e1c5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "734084427358",
            "tags": {
              "Name": "vpc1"
            },
            "tags_all": {
              "Name": "vpc1"
            },
            "vpc_id": "vpc-04331e298d3cea4bc"
          },
          "dependencies": [
            "module.vpc1.aws_vpc.this",
            "module.vpc1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:734084427358:subnet/subnet-0fa8fda5c750448d2",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.1.3.0/24",
            "id": "subnet-0fa8fda5c750448d2",
            "ipv6_cidr_block": "2406:da1a:f1f:9602::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0b6c9a116885549a6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "734084427358",
            "tags": {
              "Name": "vpc1"
            },
            "tags_all": {
              "Name": "vpc1"
            },
            "vpc_id": "vpc-04331e298d3cea4bc"
          },
          "dependencies": [
            "module.vpc1.aws_vpc.this",
            "module.vpc1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:734084427358:vpc/vpc-04331e298d3cea4bc",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0cf72237758821b29",
            "default_route_table_id": "rtb-05b6fdba2554e09ac",
            "default_security_group_id": "sg-04ac7b59460665560",
            "dhcp_options_id": "dopt-39ad0552",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-04331e298d3cea4bc",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0b6d840c12daa8297",
            "ipv6_cidr_block": "2406:da1a:f1f:9600::/56",
            "main_route_table_id": "rtb-05b6fdba2554e09ac",
            "owner_id": "734084427358",
            "tags": {
              "Name": "vpc1"
            },
            "tags_all": {
              "Name": "vpc1"
            }
          }
        }
      ]
    }
  ]
}